--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tufte-css",
+  "name": "classless-tufte-css",
   "version": "1.0.1",
   "description": "Classless Tufte CSS provides tools to style web articles written in semantic HTML using the ideas demonstrated by Edward Tufte’s books and handouts. Edward Tufte uses a distinctive style in his handouts: simple, with well-set typography, extensive sidenotes, and tight integration of graphics and charts.",
   "repository": {
