--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "classless-tufte-css",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "Classless Tufte CSS provides tools to style web articles written in semantic HTML using the ideas demonstrated by Edward Tufte’s books and handouts. Edward Tufte uses a distinctive style in his handouts: simple, with well-set typography, extensive sidenotes, and tight integration of graphics and charts.",
   "repository": {
     "type": "git",
@@ -24,6 +24,9 @@
     "tufte.min.css",
     "et-book/"
   ],
+  "scripts": {
+    "prepublish": "cleancss -o tufte.min.css tufte.css"
+  },
   "dependencies": {
     "clean-css-cli": "^5.6.3"
   }
